--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
@@ -24,6 +25,11 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.1.0",
     "prettier": "^1.10.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": ["prettier --double-quote --write", "git add"]
   }
 }
