--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "styled-components": "^3.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +31,9 @@
     "prettier": "^1.10.2"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": ["prettier --double-quote --write", "git add"]
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --double-quote --write",
+      "git add"
+    ]
   }
 }
